# Nexorix-claw

./: README.md  claw.py  core.py  exceptions.py  fixer.py  memory.py  nexcorix_claw.py  pyproject.toml  run.bat  run.sh  scraper.py  utils.py
modules/: _init_.py  memory_advanced.py  memory_compactor.py  skill_manager.py
modules/module/module/: memory_store.py
modules/module/module/module/module/: workspace.py
modules/module/module/module/module/module/: webui. py
modules/module/module/module/module/module/module/: rag. py
modules/module/module/module/module/module/module/module/module/: multi_agent.py
modules/module/module/module/module/module/module/module/module/module/: skill_marketplace.py
modules/module/module/module/module/module/module/module/module/module/module/: Observability. py
modules/module/module/module/module/module/module/module/module/module/module/module/: voice. py
modules/modules/: workspace.py
modules/modules/modules/: memory_store.py
modules/modules/modules/modules/: permission.py  rag.py
modules/modules/modules/modules/modules/modules/modules/: mcp_client_v2.py  skill_loader.py
modules/modules/modules/modules/modules/modules/modules/modules/modules/modules/: knowledge_graph.py
